--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     ],
     "require": {
         "illuminate/database": "^8.13",
-        "illuminate/events": "^8.13"
+        "illuminate/events": "^8.13",
+        "slim/slim": "4.*",
+        "slim/psr7": "^1.2"
     }
 }
